syntax = "proto3";

option go_package = "github.com/viperadnan-git/gogpm/internal/pb";


message CommitToken {
  int64 field1 = 1;
  bytes field2 = 2;
}
